[package]
name = "haptic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.x86_64-pc-windows-gnu]
linker = "x86_64-w64-mingw32-gcc"

[dependencies]
winit = "0.28"
pixels = "0.11"
image = "0.24"
serialport = "4.2.0"
anyhow = "1.0"

